--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^6.1.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.9.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
